# Mado

./: .gitmodules  Cargo.toml  README.md
iki/: Cargo.toml
mado/: Cargo.toml
mado/src/: lib.rs
mado/src/events/: mod.rs
mado/src/services/: host.rs  mado_version.rs  mod.rs  music_player.rs
mado/src/services/shared_impls/: mado_version.rs  mod.rs
mado_doc/: Cargo.toml  README.md  build.rs
mado_doc/docs/events/: schema.json
rainmeter/: Cargo.toml
rainmeter/src/: lib.rs
shigure/: Cargo.toml  Rainmeter.md  build.rs
shigure/docs/commands/: .gitkeep  host.md  madoversionservice.md  musicplayerservice.md
shigure/src/: lib.rs
shigure/src/events/: mod.rs
shigure/src/services/: host.rs  mod.rs  music_player.rs
yomi/: Cargo.toml
