[package]
name = "shigure"
version = "0.1.0"
edition = "2024"

[dependencies]
tao = "0.34.0"
wry = "0.52.0"
wry_cmd = { path = "../../wry_cmd/wry_cmd" }

rainmeter = { version = "*" }
windows = { version = "0.61.3", features = ["Win32"] }
once_cell = "1.19.0"
softbuffer = "0.4.6"
mado = { path = "../mado" }
serde = "1.0.219"
serde_json = "1.0.141"
parking_lot = "0.12.4"
shadow-rs = { version = "1.2.0", default-features = false }
# This is a rainmeter module
[lib]
crate-type = ["cdylib"]

[build-dependencies]
winres = "0.1.12"
shadow-rs = "1.2.0"
wry_cmd = { path = "../../wry_cmd/wry_cmd", features = [
    "docs",
], default-features = false }
walkdir = "*"
